syntax = "proto3";
import "google/protobuf/empty.proto";
package pingpong;

option go_package = "./api";

service PongService {
    rpc SayPong(google.protobuf.Empty) returns(Pong) {}
    rpc StreamPong (Ping) returns (stream Pong) {}
}

message Ping {
    string ping = 1;
}

message Pong {
    string pong = 1;
}
